test/expected/upc-error.out
cdecl> explain relaxed int x
               ^
3,9: error: "relaxed int" requires "shared"
